[package]
name = "oak_status"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# diesel = { version = "1.0.0", features = ["sqlite"] }
once_cell = "1.13.0"
systemstat = "0.1.11"